[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ui/energy_icon/energy_icon.png" type="Texture" id=1]
[ext_resource path="res://src/themes/MainMenu.tres" type="Theme" id=2]
[ext_resource path="res://src/dynamic_fonts/Pixellari_22.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/scripts/RechargeMenu.gd" type="Script" id=4]
[ext_resource path="res://src/animations/FadeOut.tres" type="Animation" id=5]
[ext_resource path="res://assets/sfx/menu/button_click.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="RechargeMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H" type="HBoxContainer" parent="V"]
margin_top = 182.0
margin_right = 554.0
margin_bottom = 266.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="V/H"]
margin_left = 93.0
margin_right = 177.0
margin_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 84, 84 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="V/H"]
margin_left = 181.0
margin_top = 18.0
margin_right = 460.0
margin_bottom = 66.0
text = "Recharging..."
align = 1

[node name="Label2" type="Label" parent="V"]
margin_top = 270.0
margin_right = 554.0
margin_bottom = 293.0
custom_fonts/font = ExtResource( 3 )
text = "Move and exercise in the real world to recharge energy!"
align = 1

[node name="H2" type="HBoxContainer" parent="V"]
margin_top = 297.0
margin_right = 554.0
margin_bottom = 361.0
alignment = 1

[node name="GoBackButton" type="Button" parent="V/H2"]
margin_left = 184.0
margin_right = 370.0
margin_bottom = 64.0
rect_min_size = Vector2( 186, 64 )
text = "Back to Menu"

[node name="FadeRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergySaveTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
"anims/Fade Out" = ExtResource( 5 )
anims/RESET = SubResource( 1 )

[node name="ButtonAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
mix_target = 2
bus = "SFX"

[connection signal="pressed" from="V/H2/GoBackButton" to="." method="_on_GoBackButton_pressed"]
[connection signal="timeout" from="EnergySaveTimer" to="." method="_on_EnergySaveTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
